--- a/lab-dw-data-structuring-and-combining.ipynb
+++ b/lab-dw-data-structuring-and-combining.ipynb
@@ -36,14 +36,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "492d06e3-92c7-4105-ac72-536db98d3244",
    "metadata": {
     "id": "492d06e3-92c7-4105-ac72-536db98d3244"
    },
    "outputs": [],
    "source": [
-    "# Your code goes here"
+    "import pandas as pd\n",
+    "\n",
+    "# Cargar los datasets\n",
+    "file1 = pd.read_csv('data/file1.csv')\n",
+    "file2 = pd.read_csv('data/file2.csv')\n",
+    "file3 = pd.read_csv('data/file3.csv')\n",
+    "\n",
+    "# Renombrar columnas para que coincidan\n",
+    "file1.rename(columns={'ST': 'State', 'GENDER': 'Gender'}, inplace=True)\n",
+    "file2.rename(columns={'ST': 'State', 'GENDER': 'Gender'}, inplace=True)\n",
+    "\n",
+    "# Reordenar columnas de file3 para que coincidan con file1 y file2\n",
+    "file3 = file3[['Customer', 'State', 'Gender', 'Education', 'Customer Lifetime Value', 'Income', 'Monthly Premium Auto', 'Number of Open Complaints', 'Policy Type', 'Vehicle Class', 'Total Claim Amount']]\n",
+    "\n",
+    "# Reordenar columnas de file1 y file2 para que coincidan con file3\n",
+    "file1 = file1[['Customer', 'State', 'Gender', 'Education', 'Customer Lifetime Value', 'Income', 'Monthly Premium Auto', 'Number of Open Complaints', 'Policy Type', 'Vehicle Class', 'Total Claim Amount']]\n",
+    "file2 = file2[['Customer', 'State', 'Gender', 'Education', 'Customer Lifetime Value', 'Income', 'Monthly Premium Auto', 'Number of Open Complaints', 'Policy Type', 'Vehicle Class', 'Total Claim Amount']]\n",
+    "\n",
+    "# Combinar los datasets\n",
+    "combined_data = pd.concat([file1, file2, file3], ignore_index=True)\n",
+    "\n",
+    "# Guardar el dataset combinado\n",
+    "combined_data.to_csv('data/combined_data.csv', index=False)"
    ]
   },
   {
@@ -146,7 +168,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -160,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
