chore: commit save point

--- a/lab-dw-data-structuring-and-combining.ipynb
+++ b/lab-dw-data-structuring-and-combining.ipynb
@@ -36,12 +36,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "492d06e3-92c7-4105-ac72-536db98d3244",
    "metadata": {
     "id": "492d06e3-92c7-4105-ac72-536db98d3244"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nan 'F' 'M']\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -64,8 +72,26 @@
     "# Combinar los datasets\n",
     "combined_data = pd.concat([file1, file2, file3], ignore_index=True)\n",
     "\n",
+    "# Función para limpiar y estandarizar la columna 'Gender'\n",
+    "def clean_gender(gender):\n",
+    "    if pd.isna(gender):\n",
+    "        return gender\n",
+    "    gender = gender.strip().lower()\n",
+    "    if gender in ['m', 'male']:\n",
+    "        return 'M'\n",
+    "    elif gender in ['f', 'female', 'femal']:\n",
+    "        return 'F'\n",
+    "    else:\n",
+    "        return gender\n",
+    "\n",
+    "# Aplicar la función a la columna 'Gender'\n",
+    "combined_data['Gender'] = combined_data['Gender'].apply(clean_gender)\n",
+    "\n",
     "# Guardar el dataset combinado\n",
-    "combined_data.to_csv('data/combined_data.csv', index=False)"
+    "combined_data.to_csv('data/combined_data.csv', index=False)\n",
+    "\n",
+    "# Verificar los valores únicos en la columna 'Gender'\n",
+    "print(combined_data['Gender'].unique())"
    ]
   },
   {
