chore: commit save point

--- a/lab-dw-data-structuring-and-combining.ipynb
+++ b/lab-dw-data-structuring-and-combining.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "492d06e3-92c7-4105-ac72-536db98d3244",
    "metadata": {
     "id": "492d06e3-92c7-4105-ac72-536db98d3244"
@@ -46,7 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[nan 'F' 'M']\n"
+      "['Washington' 'Arizona' 'Nevada' 'California' 'Oregon' nan]\n"
      ]
     }
    ],
@@ -87,11 +87,35 @@
     "# Aplicar la función a la columna 'Gender'\n",
     "combined_data['Gender'] = combined_data['Gender'].apply(clean_gender)\n",
     "\n",
+    "\n",
+    "# Función para limpiar y estandarizar la columna 'State'\n",
+    "def clean_state(state):\n",
+    "    if pd.isna(state):\n",
+    "        return state\n",
+    "    state = state.strip().lower()\n",
+    "    state_mapping = {\n",
+    "        'cali': 'California',\n",
+    "        'california': 'California',\n",
+    "        'az': 'Arizona',\n",
+    "        'arizona': 'Arizona',\n",
+    "        'nv': 'Nevada',\n",
+    "        'nevada': 'Nevada',\n",
+    "        'or': 'Oregon',\n",
+    "        'oregon': 'Oregon',\n",
+    "        'wa': 'Washington',\n",
+    "        'washington': 'Washington'\n",
+    "    }\n",
+    "    return state_mapping.get(state, state.capitalize())\n",
+    "\n",
+    "# Aplicar la función a la columna 'State'\n",
+    "combined_data['State'] = combined_data['State'].apply(clean_state)\n",
+    "\n",
+    "\n",
     "# Guardar el dataset combinado\n",
     "combined_data.to_csv('data/combined_data.csv', index=False)\n",
     "\n",
     "# Verificar los valores únicos en la columna 'Gender'\n",
-    "print(combined_data['Gender'].unique())"
+    "print(combined_data['State'].unique())"
    ]
   },
   {
