chore: commit save point

--- a/lab-dw-data-structuring-and-combining.ipynb
+++ b/lab-dw-data-structuring-and-combining.ipynb
@@ -144,14 +144,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "aa10d9b0-1c27-4d3f-a8e4-db6ab73bfd26",
    "metadata": {
     "id": "aa10d9b0-1c27-4d3f-a8e4-db6ab73bfd26"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   unnamed:_0 customer       state  customer_lifetime_value response  \\\n",
+      "0           0  DK49336     Arizona              4809.216960       No   \n",
+      "1           1  KX64629  California              2228.525238       No   \n",
+      "2           2  LZ68649  Washington             14947.917300       No   \n",
+      "3           3  XL78013      Oregon             22332.439460      Yes   \n",
+      "4           4  QA50777      Oregon              9025.067525       No   \n",
+      "\n",
+      "   coverage education effective_to_date employmentstatus gender  ...  \\\n",
+      "0     Basic   College        2011-02-18         Employed      M  ...   \n",
+      "1     Basic   College        2011-01-18       Unemployed      F  ...   \n",
+      "2     Basic  Bachelor        2011-02-10         Employed      M  ...   \n",
+      "3  Extended   College        2011-01-11         Employed      M  ...   \n",
+      "4   Premium  Bachelor        2011-01-17    Medical Leave      F  ...   \n",
+      "\n",
+      "   number_of_policies     policy_type        policy  renew_offer_type  \\\n",
+      "0                   9  Corporate Auto  Corporate L3            Offer3   \n",
+      "1                   1   Personal Auto   Personal L3            Offer4   \n",
+      "2                   2   Personal Auto   Personal L3            Offer3   \n",
+      "3                   2  Corporate Auto  Corporate L3            Offer2   \n",
+      "4                   7   Personal Auto   Personal L2            Offer1   \n",
+      "\n",
+      "   sales_channel  total_claim_amount  vehicle_class  vehicle_size  \\\n",
+      "0          Agent          292.800000  Four-Door Car       Medsize   \n",
+      "1    Call Center          744.924331  Four-Door Car       Medsize   \n",
+      "2    Call Center          480.000000            SUV       Medsize   \n",
+      "3         Branch          484.013411  Four-Door Car       Medsize   \n",
+      "4         Branch          707.925645  Four-Door Car       Medsize   \n",
+      "\n",
+      "  vehicle_type month  \n",
+      "0            A     2  \n",
+      "1            A     1  \n",
+      "2            A     2  \n",
+      "3            A     1  \n",
+      "4            A     1  \n",
+      "\n",
+      "[5 rows x 27 columns]\n",
+      "  customer       state  customer_lifetime_value response  coverage education  \\\n",
+      "0  DK49336     Arizona              4809.216960       No     Basic   College   \n",
+      "1  KX64629  California              2228.525238       No     Basic   College   \n",
+      "2  LZ68649  Washington             14947.917300       No     Basic  Bachelor   \n",
+      "3  XL78013      Oregon             22332.439460      Yes  Extended   College   \n",
+      "4  QA50777      Oregon              9025.067525       No   Premium  Bachelor   \n",
+      "\n",
+      "  effective_to_date employmentstatus gender  income  ... number_of_policies  \\\n",
+      "0        2011-02-18         Employed      M   48029  ...                  9   \n",
+      "1        2011-01-18       Unemployed      F       0  ...                  1   \n",
+      "2        2011-02-10         Employed      M   22139  ...                  2   \n",
+      "3        2011-01-11         Employed      M   49078  ...                  2   \n",
+      "4        2011-01-17    Medical Leave      F   23675  ...                  7   \n",
+      "\n",
+      "      policy_type        policy  renew_offer_type  sales_channel  \\\n",
+      "0  Corporate Auto  Corporate L3            Offer3          Agent   \n",
+      "1   Personal Auto   Personal L3            Offer4    Call Center   \n",
+      "2   Personal Auto   Personal L3            Offer3    Call Center   \n",
+      "3  Corporate Auto  Corporate L3            Offer2         Branch   \n",
+      "4   Personal Auto   Personal L2            Offer1         Branch   \n",
+      "\n",
+      "   total_claim_amount  vehicle_class vehicle_size vehicle_type month  \n",
+      "0          292.800000  Four-Door Car      Medsize            A     2  \n",
+      "1          744.924331  Four-Door Car      Medsize            A     1  \n",
+      "2          480.000000            SUV      Medsize            A     2  \n",
+      "3          484.013411  Four-Door Car      Medsize            A     1  \n",
+      "4          707.925645  Four-Door Car      Medsize            A     1  \n",
+      "\n",
+      "[5 rows x 26 columns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jesus\\AppData\\Local\\Temp\\ipykernel_22812\\1915689929.py:17: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  marketing_data.fillna(method='ffill', inplace=True)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code goes here"
+    "import pandas as pd\n",
+    "\n",
+    "# Cargar el dataset\n",
+    "marketing_data = pd.read_csv('data/marketing_customer_analysis_clean.csv')\n",
+    "\n",
+    "# Mostrar las primeras filas del dataset para inspección\n",
+    "print(marketing_data.head())\n",
+    "\n",
+    "# Limpiar y formatear los datos según sea necesario\n",
+    "# Por ejemplo, eliminar columnas innecesarias, manejar valores nulos, etc.\n",
+    "\n",
+    "# Ejemplo: Eliminar columnas innecesarias\n",
+    "columns_to_drop = ['unnamed:_0']\n",
+    "marketing_data.drop(columns=columns_to_drop, inplace=True)\n",
+    "\n",
+    "# Ejemplo: Manejar valores nulos\n",
+    "marketing_data.fillna(method='ffill', inplace=True)\n",
+    "\n",
+    "# Guardar el dataset limpio\n",
+    "marketing_data.to_csv('data/marketing_customer_analysis_cleaned.csv', index=False)\n",
+    "\n",
+    "# Mostrar las primeras filas del dataset limpio para inspección\n",
+    "print(marketing_data.head())"
    ]
   },
   {
