chore: commit save point

--- a/lab-dw-data-structuring-and-combining.ipynb
+++ b/lab-dw-data-structuring-and-combining.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "aa10d9b0-1c27-4d3f-a8e4-db6ab73bfd26",
    "metadata": {
     "id": "aa10d9b0-1c27-4d3f-a8e4-db6ab73bfd26"
@@ -189,45 +189,27 @@
       "3            A     1  \n",
       "4            A     1  \n",
       "\n",
-      "[5 rows x 27 columns]\n",
-      "  customer       state  customer_lifetime_value response  coverage education  \\\n",
-      "0  DK49336     Arizona              4809.216960       No     Basic   College   \n",
-      "1  KX64629  California              2228.525238       No     Basic   College   \n",
-      "2  LZ68649  Washington             14947.917300       No     Basic  Bachelor   \n",
-      "3  XL78013      Oregon             22332.439460      Yes  Extended   College   \n",
-      "4  QA50777      Oregon              9025.067525       No   Premium  Bachelor   \n",
-      "\n",
-      "  effective_to_date employmentstatus gender  income  ... number_of_policies  \\\n",
-      "0        2011-02-18         Employed      M   48029  ...                  9   \n",
-      "1        2011-01-18       Unemployed      F       0  ...                  1   \n",
-      "2        2011-02-10         Employed      M   22139  ...                  2   \n",
-      "3        2011-01-11         Employed      M   49078  ...                  2   \n",
-      "4        2011-01-17    Medical Leave      F   23675  ...                  7   \n",
-      "\n",
-      "      policy_type        policy  renew_offer_type  sales_channel  \\\n",
-      "0  Corporate Auto  Corporate L3            Offer3          Agent   \n",
-      "1   Personal Auto   Personal L3            Offer4    Call Center   \n",
-      "2   Personal Auto   Personal L3            Offer3    Call Center   \n",
-      "3  Corporate Auto  Corporate L3            Offer2         Branch   \n",
-      "4   Personal Auto   Personal L2            Offer1         Branch   \n",
-      "\n",
-      "   total_claim_amount  vehicle_class vehicle_size vehicle_type month  \n",
-      "0          292.800000  Four-Door Car      Medsize            A     2  \n",
-      "1          744.924331  Four-Door Car      Medsize            A     1  \n",
-      "2          480.000000            SUV      Medsize            A     2  \n",
-      "3          484.013411  Four-Door Car      Medsize            A     1  \n",
-      "4          707.925645  Four-Door Car      Medsize            A     1  \n",
-      "\n",
-      "[5 rows x 26 columns]\n"
+      "[5 rows x 27 columns]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jesus\\AppData\\Local\\Temp\\ipykernel_22812\\1915689929.py:17: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\jesus\\AppData\\Local\\Temp\\ipykernel_22812\\819000446.py:17: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  marketing_data.fillna(method='ffill', inplace=True)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['College', 'Bachelor', 'High School or Below', 'Doctor', 'Master'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -249,11 +231,38 @@
     "# Ejemplo: Manejar valores nulos\n",
     "marketing_data.fillna(method='ffill', inplace=True)\n",
     "\n",
+    "# Identificar las columnas categóricas\n",
+    "categorical_columns = marketing_data.select_dtypes(include=['object']).columns\n",
+    "# print(\"Columnas categóricas:\", categorical_columns)\n",
+    "\n",
+    "# Revisar los valores únicos en las columnas categóricas\n",
+    "# for column in categorical_columns:\n",
+    "    # print(f\"Valores únicos en '{column}':\")\n",
+    "    # print(marketing_data[column].unique())\n",
+    "    # print()\n",
+    "\n",
+    "# Crear una función para homogeneizar la columna 'education'\n",
+    "def clean_education(education):\n",
+    "    if pd.isna(education):\n",
+    "        return education\n",
+    "    education = education.strip().lower()\n",
+    "    education_mapping = {\n",
+    "        'high school or below': 'High School or Below',\n",
+    "        'bachelor': 'Bachelor',\n",
+    "        'college': 'College',\n",
+    "        'master': 'Master',\n",
+    "        'doctor': 'Doctor'\n",
+    "    }\n",
+    "    return education_mapping.get(education, education.capitalize())\n",
+    "\n",
+    "# Aplicar la función a la columna 'education'\n",
+    "marketing_data['education'] = marketing_data['education'].apply(clean_education)\n",
+    "\n",
     "# Guardar el dataset limpio\n",
     "marketing_data.to_csv('data/marketing_customer_analysis_cleaned.csv', index=False)\n",
     "\n",
-    "# Mostrar las primeras filas del dataset limpio para inspección\n",
-    "print(marketing_data.head())"
+    "marketing_data['education'].unique()\n",
+    "\n"
    ]
   },
   {
