chore: commit save point

--- a/lab-dw-data-structuring-and-combining.ipynb
+++ b/lab-dw-data-structuring-and-combining.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "492d06e3-92c7-4105-ac72-536db98d3244",
    "metadata": {
     "id": "492d06e3-92c7-4105-ac72-536db98d3244"
@@ -46,6 +46,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Número de nulos a tratar: Customer                     2937\n",
+      "State                        2937\n",
+      "Gender                       3059\n",
+      "Education                    2937\n",
+      "Customer Lifetime Value      2944\n",
+      "Income                       2937\n",
+      "Monthly Premium Auto         2937\n",
+      "Number of Open Complaints    2937\n",
+      "Policy Type                  2937\n",
+      "Vehicle Class                2937\n",
+      "Total Claim Amount           2937\n",
+      "dtype: int64\n",
+      "Número de duplicados a tratar: 2939\n",
       "['Washington' 'Arizona' 'Nevada' 'California' 'Oregon' nan]\n"
      ]
     }
@@ -110,6 +123,14 @@
     "# Aplicar la función a la columna 'State'\n",
     "combined_data['State'] = combined_data['State'].apply(clean_state)\n",
     "\n",
+    "# Calcula los null.sum de cada columna\n",
+    "print(f\"Número de nulos a tratar: {combined_data.isnull().sum()}\")\n",
+    "\n",
+    "# Calcula los duplicated.sum de cada columna\n",
+    "print(f\"Número de duplicados a tratar: {combined_data.duplicated().sum()}\")\n",
+    "\n",
+    "# Eliminar duplicados\n",
+    "combined_data.drop_duplicates(inplace=True)\n",
     "\n",
     "# Guardar el dataset combinado\n",
     "combined_data.to_csv('data/combined_data.csv', index=False)\n",
@@ -144,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "aa10d9b0-1c27-4d3f-a8e4-db6ab73bfd26",
    "metadata": {
     "id": "aa10d9b0-1c27-4d3f-a8e4-db6ab73bfd26"
@@ -196,7 +217,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jesus\\AppData\\Local\\Temp\\ipykernel_22812\\819000446.py:17: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\jesus\\AppData\\Local\\Temp\\ipykernel_5776\\42018454.py:17: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  marketing_data.fillna(method='ffill', inplace=True)\n"
      ]
     },
@@ -207,7 +228,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,6 +278,9 @@
     "\n",
     "# Aplicar la función a la columna 'education'\n",
     "marketing_data['education'] = marketing_data['education'].apply(clean_education)\n",
+    "\n",
+    "# Elimina duplicados\n",
+    "marketing_data.drop_duplicates(inplace=True)\n",
     "\n",
     "# Guardar el dataset limpio\n",
     "marketing_data.to_csv('data/marketing_customer_analysis_cleaned.csv', index=False)\n",
