--- a/lab-dw-data-structuring-and-combining.ipynb
+++ b/lab-dw-data-structuring-and-combining.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "492d06e3-92c7-4105-ac72-536db98d3244",
    "metadata": {
     "id": "492d06e3-92c7-4105-ac72-536db98d3244"
@@ -59,12 +59,22 @@
       "Total Claim Amount           2937\n",
       "dtype: int64\n",
       "Número de duplicados a tratar: 2939\n",
-      "['Washington' 'Arizona' 'Nevada' 'California' 'Oregon' nan]\n"
+      "gender: [nan 'F' 'M']\n",
+      "education: ['Master' 'Bachelor' 'High School or Below' 'College' 'Doctor' nan]\n",
+      "state: ['Washington' 'Arizona' 'Nevada' 'California' 'Oregon' nan]\n",
+      "Columns with null or missing values:\n",
+      "Index(['customer', 'state', 'gender', 'education', 'customer_lifetime_value',\n",
+      "       'income', 'monthly_premium_auto', 'number_of_open_complaints',\n",
+      "       'policy_type', 'vehicle_class', 'total_claim_amount'],\n",
+      "      dtype='object')\n",
+      "All null values have been successfully handled\n",
+      "0.0\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import cleaning_functions as cf\n",
     "\n",
     "# Cargar los datasets\n",
     "file1 = pd.read_csv('data/file1.csv')\n",
@@ -132,11 +142,11 @@
     "# Eliminar duplicados\n",
     "combined_data.drop_duplicates(inplace=True)\n",
     "\n",
-    "# Guardar el dataset combinado\n",
-    "combined_data.to_csv('data/combined_data.csv', index=False)\n",
+    "# Limpiar y estandarizar el dataset\n",
+    "combined_data = cf.clean_format_main(combined_data)\n",
     "\n",
-    "# Verificar los valores únicos en la columna 'Gender'\n",
-    "print(combined_data['State'].unique())"
+    "# Guardar el dataset combinado\n",
+    "combined_data.to_csv('data/combined_data.csv', index=False)"
    ]
   },
   {
@@ -165,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "aa10d9b0-1c27-4d3f-a8e4-db6ab73bfd26",
    "metadata": {
     "id": "aa10d9b0-1c27-4d3f-a8e4-db6ab73bfd26"
@@ -210,15 +220,28 @@
       "3            A     1  \n",
       "4            A     1  \n",
       "\n",
-      "[5 rows x 27 columns]\n"
+      "[5 rows x 27 columns]\n",
+      "gender: ['M' 'F']\n",
+      "education: ['College' 'Bachelor' 'High School or Below' 'Doctor' 'Master']\n",
+      "state: ['Arizona' 'California' 'Washington' 'Oregon' 'Nevada']\n",
+      "Columns with null or missing values:\n",
+      "Index([], dtype='object')\n",
+      "All null values have been successfully handled\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jesus\\AppData\\Local\\Temp\\ipykernel_5776\\42018454.py:17: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\jesus\\AppData\\Local\\Temp\\ipykernel_5776\\1679942003.py:18: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  marketing_data.fillna(method='ffill', inplace=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
      ]
     },
     {
@@ -228,13 +251,14 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import cleaning_functions as cf\n",
     "\n",
     "# Cargar el dataset\n",
     "marketing_data = pd.read_csv('data/marketing_customer_analysis_clean.csv')\n",
@@ -281,6 +305,8 @@
     "\n",
     "# Elimina duplicados\n",
     "marketing_data.drop_duplicates(inplace=True)\n",
+    "\n",
+    "marketing_data = cf.clean_format_main(marketing_data)\n",
     "\n",
     "# Guardar el dataset limpio\n",
     "marketing_data.to_csv('data/marketing_customer_analysis_cleaned.csv', index=False)\n",
