chore: commit save point

--- a/lab-dw-data-structuring-and-combining.ipynb
+++ b/lab-dw-data-structuring-and-combining.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "492d06e3-92c7-4105-ac72-536db98d3244",
    "metadata": {
     "id": "492d06e3-92c7-4105-ac72-536db98d3244"
@@ -77,9 +77,9 @@
     "import cleaning_functions as cf\n",
     "\n",
     "# Cargar los datasets\n",
-    "file1 = pd.read_csv('data/file1.csv')\n",
-    "file2 = pd.read_csv('data/file2.csv')\n",
-    "file3 = pd.read_csv('data/file3.csv')\n",
+    "file1 = pd.read_csv('data/raw/file1.csv')\n",
+    "file2 = pd.read_csv('data/raw/file2.csv')\n",
+    "file3 = pd.read_csv('data/raw/file3.csv')\n",
     "\n",
     "# Renombrar columnas para que coincidan\n",
     "file1.rename(columns={'ST': 'State', 'GENDER': 'Gender'}, inplace=True)\n",
@@ -146,7 +146,7 @@
     "combined_data = cf.clean_format_main(combined_data)\n",
     "\n",
     "# Guardar el dataset combinado\n",
-    "combined_data.to_csv('data/combined_data.csv', index=False)"
+    "combined_data.to_csv('data/processed/combined_data.csv', index=False)"
    ]
   },
   {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "aa10d9b0-1c27-4d3f-a8e4-db6ab73bfd26",
    "metadata": {
     "id": "aa10d9b0-1c27-4d3f-a8e4-db6ab73bfd26"
@@ -226,22 +226,16 @@
       "state: ['Arizona' 'California' 'Washington' 'Oregon' 'Nevada']\n",
       "Columns with null or missing values:\n",
       "Index([], dtype='object')\n",
-      "All null values have been successfully handled\n"
+      "All null values have been successfully handled\n",
+      "0.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jesus\\AppData\\Local\\Temp\\ipykernel_5776\\1679942003.py:18: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\jesus\\AppData\\Local\\Temp\\ipykernel_1560\\3826263278.py:18: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  marketing_data.fillna(method='ffill', inplace=True)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n"
      ]
     },
     {
@@ -251,7 +245,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +255,7 @@
     "import cleaning_functions as cf\n",
     "\n",
     "# Cargar el dataset\n",
-    "marketing_data = pd.read_csv('data/marketing_customer_analysis_clean.csv')\n",
+    "marketing_data = pd.read_csv('data/raw/marketing_customer_analysis_clean.csv')\n",
     "\n",
     "# Mostrar las primeras filas del dataset para inspección\n",
     "print(marketing_data.head())\n",
@@ -309,7 +303,7 @@
     "marketing_data = cf.clean_format_main(marketing_data)\n",
     "\n",
     "# Guardar el dataset limpio\n",
-    "marketing_data.to_csv('data/marketing_customer_analysis_cleaned.csv', index=False)\n",
+    "marketing_data.to_csv('data/processed/marketing_customer_analysis_cleaned.csv', index=False)\n",
     "\n",
     "marketing_data['education'].unique()\n",
     "\n"
@@ -363,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3a069e0b-b400-470e-904d-d17582191be4",
    "metadata": {
     "id": "3a069e0b-b400-470e-904d-d17582191be4"
