chore: commit save point

--- a/lab-dw-data-structuring-and-combining.ipynb
+++ b/lab-dw-data-structuring-and-combining.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "aa10d9b0-1c27-4d3f-a8e4-db6ab73bfd26",
    "metadata": {
     "id": "aa10d9b0-1c27-4d3f-a8e4-db6ab73bfd26"
@@ -231,21 +231,13 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jesus\\AppData\\Local\\Temp\\ipykernel_1560\\3826263278.py:18: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-      "  marketing_data.fillna(method='ffill', inplace=True)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "array(['College', 'Bachelor', 'High School or Below', 'Doctor', 'Master'],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +260,7 @@
     "marketing_data.drop(columns=columns_to_drop, inplace=True)\n",
     "\n",
     "# Ejemplo: Manejar valores nulos\n",
-    "marketing_data.fillna(method='ffill', inplace=True)\n",
+    "marketing_data.ffill(inplace=True)\n",
     "\n",
     "# Identificar las columnas categóricas\n",
     "categorical_columns = marketing_data.select_dtypes(include=['object']).columns\n",
