chore: commit save point

--- a/lab-dw-data-structuring-and-combining.ipynb
+++ b/lab-dw-data-structuring-and-combining.ipynb
@@ -313,6 +313,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4211e4c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  sales_channel  total_claim_amount\n",
+      "0         Agent             1742958\n",
+      "1        Branch             1255658\n",
+      "2   Call Center              886959\n",
+      "3           Web              675009\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Cargar el dataset limpio\n",
+    "marketing_data = pd.read_csv('data/processed/marketing_customer_analysis_cleaned.csv')\n",
+    "\n",
+    "# Crear una tabla pivote para resumir los ingresos totales por canal de ventas\n",
+    "summary_table = marketing_data.pivot_table(\n",
+    "    values='total_claim_amount', \n",
+    "    index='sales_channel', \n",
+    "    aggfunc='sum'\n",
+    ").reset_index()\n",
+    "\n",
+    "# Redondear los ingresos totales a 2 decimales\n",
+    "summary_table['total_claim_amount'] = summary_table['total_claim_amount'].round(2)\n",
+    "\n",
+    "# Mostrar la tabla resumen\n",
+    "print(summary_table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c793a398",
+   "metadata": {},
+   "source": [
+    "### Insights\n",
+    "\n",
+    "- Agent Channel: The \"Agent\" sales channel has the highest total revenue, amounting to 1,742,958. This indicates that customers who interact with agents tend to generate the most revenue.\n",
+    "- Branch Channel: The \"Branch\" sales channel is the second highest in terms of total revenue, with 1,255,658. This suggests that physical branch interactions are also significant contributors to revenue.\n",
+    "- Call Center Channel: The \"Call Center\" sales channel has a total revenue of 886,959, making it the third highest. This shows that call centers are an important but less dominant sales channel compared to agents and branches.\n",
+    "- Web Channel: The \"Web\" sales channel has the lowest total revenue, with 675,009. This indicates that online interactions generate the least revenue among the four channels.\n",
+    "\n",
+    "### Recommendations\n",
+    "\n",
+    "- Focus on Agent and Branch Channels: Since these channels generate the most revenue, consider investing more in training and resources for agents and branches to further enhance their performance.\n",
+    "- Improve Call Center Efficiency: Explore ways to improve the efficiency and effectiveness of the call center to potentially increase its revenue contribution.\n",
+    "- Enhance Online Presence: Investigate why the web channel generates the least revenue and consider strategies to improve the online customer experience and conversion rates."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "640993b2-a291-436c-a34d-a551144f8196",
    "metadata": {
@@ -320,6 +377,58 @@
    },
    "source": [
     "2. Create a pivot table that shows the average customer lifetime value per gender and education level. Analyze the resulting table to draw insights."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "051c2b61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "education  Bachelor  College   Doctor  High School or Below   Master\n",
+      "gender                                                              \n",
+      "F           7912.81  7756.81  7369.08               8617.29  8224.11\n",
+      "M           7698.13  8074.74  7414.38               8158.88  8154.10\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Cargar el dataset limpio\n",
+    "marketing_data = pd.read_csv('data/processed/marketing_customer_analysis_cleaned.csv')\n",
+    "\n",
+    "# Crear una tabla pivote para mostrar el valor promedio de vida del cliente por género y nivel educativo\n",
+    "pivot_table = marketing_data.pivot_table(\n",
+    "    values='customer_lifetime_value', \n",
+    "    index='gender', \n",
+    "    columns='education', \n",
+    "    aggfunc='mean'\n",
+    ").round(2)\n",
+    "\n",
+    "# Mostrar la tabla pivote\n",
+    "print(pivot_table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8751a196",
+   "metadata": {},
+   "source": [
+    "### Insights\n",
+    "\n",
+    "- Gender Comparison: On average, male customers have a slightly higher customer lifetime value compared to female customers across all education levels.\n",
+    "- Education Level Comparison: Customers with a \"Doctor\" or \"Premium\" education level have the highest average customer lifetime value, indicating that higher education levels are associated with higher customer lifetime values.\n",
+    "- High School or Below: Customers with \"High School or Below\" education level have the lowest average customer lifetime value, suggesting that lower education levels are associated with lower customer lifetime values.\n",
+    "\n",
+    "### Recommendations\n",
+    "\n",
+    "- Target Higher Education Levels: Marketing strategies could focus more on customers with higher education levels, as they tend to have higher customer lifetime values.\n",
+    "- Gender-Specific Campaigns: Consider creating gender-specific marketing campaigns to address the slight differences in customer lifetime value between male and female customers."
    ]
   },
   {
