chore: commit save point

--- a/lab-dw-data-structuring-and-combining.ipynb
+++ b/lab-dw-data-structuring-and-combining.ipynb
@@ -458,14 +458,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "3a069e0b-b400-470e-904d-d17582191be4",
    "metadata": {
     "id": "3a069e0b-b400-470e-904d-d17582191be4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      policy_type  month  number_of_open_complaints\n",
+      "0  Corporate Auto      1                        392\n",
+      "1  Corporate Auto      2                        347\n",
+      "2   Personal Auto      1                       1583\n",
+      "3   Personal Auto      2                       1312\n",
+      "4    Special Auto      1                         81\n",
+      "5    Special Auto      2                         82\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code goes here"
+    "import pandas as pd\n",
+    "\n",
+    "# Cargar el dataset limpio\n",
+    "marketing_data = pd.read_csv('data/processed/marketing_customer_analysis_cleaned.csv')\n",
+    "\n",
+    "# Extraer el mes de la columna 'effective_to_date'\n",
+    "marketing_data['month'] = pd.to_datetime(marketing_data['effective_to_date']).dt.month\n",
+    "\n",
+    "# Crear una tabla resumen para mostrar el número de quejas por tipo de póliza y mes\n",
+    "summary_table = marketing_data.groupby(['policy_type', 'month'])['number_of_open_complaints'].sum().reset_index()\n",
+    "\n",
+    "# Mostrar la tabla resumen en formato largo\n",
+    "print(summary_table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89e214b6",
+   "metadata": {},
+   "source": [
+    "### Insights\n",
+    "\n",
+    "- Corporate Auto: The number of complaints for \"Corporate Auto\" policy type is higher in February compared to January.\n",
+    "- Personal Auto: The \"Personal Auto\" policy type has the highest number of complaints in both January and February, indicating that this policy type may require more attention.\n",
+    "- Special Auto: The \"Special Auto\" policy type has the lowest number of complaints, suggesting that customers with this policy type are generally more satisfied.\n",
+    "\n",
+    "### Recommendations\n",
+    "\n",
+    "- Focus on Personal Auto: Since the \"Personal Auto\" policy type has the highest number of complaints, consider investigating the reasons behind the complaints and implementing measures to improve customer satisfaction.\n",
+    "- Monitor Trends: Keep monitoring the number of complaints by policy type and month to identify any emerging trends and address issues proactively."
    ]
   }
  ],
